   1.4 - 2013-10-24
         added option --lax-xpath-checks
         deprecated the xsd output plugin
         tree: now prints augmented nodes
         tree: now prints rpcs nad notifications defined in submodules
         tree: new syntax for presence containers
         tree: mark lists with '*'
         allow 'must' under 'anyxml'
         fixed unique check for keys

         #83 - reject identifiers that start with "[xX][mM][lL]"
         #89 - dsdl: handle % in strings
         #90 - do not crash on null key statements
         #92 - dsdl: handle conditional uses
         #93 - dsdl: fixed problem  with anyxml
         #94 - dsdl: mandatory choice inside a grouping

   1.3 - 2013-01-31
         added new plugins: hypertree and jstree
         added new plugins: jsonxsl and jtox
         added command line flags -W and -E to treat warnings as errors
         xsd: added command line flag --xsd-global-complex-types
         tree: added command line flasgs  --tree-depth and
               --tree-path to prune the printed tree

         #58 - detect when a leaf restricts a type so that the type's
               default value becomes illegal
         #59 - given an error if a list's unique statement references
               leafs which have different config flags
         #60 - xpath tokenizer bug fix
         #62 - dsdl: handle empty default values
         #63 - dsdl: handle empty containers and lists.
         #66 - dsdl: interleave module grammars
         #68 - dsdl: schematron rule for instance identifier.
         #73 - dsdl: fixed bug when a submodule used an extension from
               an imported  module
         #74 - dsdl: correctly handle empty choice and case nodes
         #79 - dsdl: now treats identity derivation as irreflexive and
               transitive
         allow choice in case
         fixed bug when checking the canonical order for length and pattern
            (any orded was accepted)