@@ -333,6 +333,9 @@ error_codes = \
     'BAD_TYPE_IN_KEY':
       (1,
        'the type %s cannot be part of a key, used by leaf %s'),
+    'BAD_TYPE_IN_LEAF_LIST':
+      (1,
+       'the type %s cannot be used for a leaf-list'),
     'DEFAULT_AND_MANDATORY':
       (1,
        'a \'default\' value cannot be given when \'mandatory\' is "true"'),
